Filter bar alignment fix

--- a/style/main.css
+++ b/style/main.css
@@ -174,6 +174,7 @@ body > p {
   margin: 20px 0;
   display: flex;
   gap: 25px;
+  justify-content: center;
 }
 
 #filters > p {
